--- a/style.css
+++ b/style.css
@@ -131,7 +131,64 @@ body::before{
 
 .forecast-item-container{
     display: flex;
-    border: solid;
-    
+    gap: 15px;
+    overflow: scroll;
+    padding-bottom: 10px;
 }
+
+.forecast-item-container::-webkit-scrollbar{
+    width:0;
+}
+
+.forecast-item-container::-webkit-scrollbar-track{
+    background-color: rgb(0, 0, 0,0.1);
+    border-radius: 99px;
+}
+
+.forecast-item-container::-webkit-scrollbar-thumb{
+    background: rgb(0, 0, 0,0.15);
+    border-radius: 99px;
+}
+
+
+.forecast-item{
+    min-width: 70px;
+    background-color:rgb(255,255,255,0.1);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 6px;
+    padding: 10px ;
+    border-radius:12px ;
+    transition: 0.3ms background;
+}
+
+.forecast-item:hover{
+    background: rgb(255,255,255,0.15);
+}
+
+.forecast-item-img{
+width: 35px;
+height: 35px;
+}
+
 /*end section: weather info*/
+
+/*section message*/
+
+.section-message{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
+    margin-top: 20%;
+}
+
+
+.section-message img{
+    width: fit-content;
+    height: 200px;
+}
+
+/*end section message*/
